[build] Remove obsolete intellij.build.test.bootstrap.suite (aka BootstrapTests) in tests (IJI-3451)
GitOrigin-RevId: e6aed0a242e4a588e301b6c2deb4251c24a6577b